fix: created the psgc controller to isolate each function per category
